<resources>
    <string name="app_name">TITKUL EDU</string>
    <string name="configuration">Cấu hình</string>
    <string name="home_page">Trang chủ</string>
    <string name="pass">Mã khóa</string>
    <string name="instruction">Hướng dẫn</string>
    <string name="intro">Giới thiệu</string>
    <string name="rules">Điều khoản dịch vụ</string>
    <string name="update_check">Kiểm tra cập nhật</string>
    <string name="notifyTitle"></string>
    <string name="gpsNotifyMsg">Current mobile phone scanning Bluetooth needs to open the positioning function</string>
    <string name="setting">Go to settings</string>
    <string name="cancel">Cancel</string>
    <string name="start_scan">Start scanning</string>
    <string name="stop_scan">Stop scanning</string>
    <string name="expand_search_settings">Expand search settings</string>
    <string name="retrieve_search_settings">Retrieve search settings</string>
    <string name="connect_fail">connection failed</string>
    <string name="active_disconnected">disconnect</string>
    <string name="disconnected">Connection disconnect</string>
    <string name="please_open_blue">Please turn on Bluetooth first</string>
    <string name="select_operation_type">Select operation type</string>
    <string name="characteristic">Characteristic</string>
    <string name="data_changed">Data changes:</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="open_notification">Open notification</string>
    <string name="close_notification">Close notification</string>
    <string name="service_list">Service list</string>
    <string name="characteristic_list">Characteristic list</string>
    <string name="console">Console</string>
    <string name="name">Device broadcast name：</string>
    <string name="mac">MAC:</string>
    <string name="service">Service</string>
    <string name="type">Service type (main service)</string>
    <string name="scan_setting">Below, you can configure the conditions that you need to scan the device, which can be empty</string>
    <string name="setting_name">Enter a broadcast name for Bluetooth devices, separated by English commas</string>
    <string name="setting_mac">Enter Bluetooth device MAC</string>
    <string name="setting_uuid">Enter Bluetooth device UUID, separated by commas in English</string>
    <string name="input_hex">Please enter the HEX format command</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="address"><b>Địa chỉ</b>:11/2B Bình Đức Street , Ward 15, District 8, Hồ Chí Minh City</string>
    <string name="phone"><b>Phone</b>:0938806388</string>
    <string name="email"><b>Email</b>:titkul2020@gmail.com</string>
    <string name="coding">Coding</string>
    <string name="comingsoon">Coming soon</string>
    <string name="controller">Controller</string>
    <string name="open_company_website">Opening company website</string>
    <string name="choosing_connected">Choosing connected device</string>
    <string name="ok">Ok</string>
    <string name="bluetooth_not_available">Bluetooth Not Available iIn This Device</string>
    <string name="wait">Please Wait!!</string>
    <string name="paired_device">Paired Device</string>
    <string name="already_connected_device">You already connected to device</string>
    <string name="disconnect_device">You already connected! Want to disconect</string>
    <string name="speech_prompt">Say Something</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
</resources>
